force-app/main/default/objects/Contact/fields/FavoriteProfessionalSports_Team_1__c.field-meta.xml
<CustomField>
    <fullName>FavoriteProfessionalSports_Team_1__c</fullName>
    <inlineHelpText>Add the name of the Professional Sports Team that is the most Favorite of the Contact.</inlineHelpText>
    <label>Favorite Professional Sports Team 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>