force-app/main/default/objects/Contact/fields/FavoriteProfessionalSportsTeam2__c.field-meta.xml
<CustomField>
    <fullName>FavoriteProfessionalSportsTeam2__c</fullName>
    <inlineHelpText>Add the name of the Professional Sports Team that is the second most Favorite of the Contact.</inlineHelpText>
    <label>Favorite Professional Sports Team 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>