force-app/main/default/objects/Contact/fields/FavoriteProfessionalSportsTeam3__c.field-meta.xml
<CustomField>
    <fullName>FavoriteProfessionalSportsTeam3__c</fullName>
    <inlineHelpText>Add the name of the Professional Sports Team that is the third most Favorite of the Contact.</inlineHelpText>
    <label>Favorite Professional Sports Team 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>