force-app/main/default/objects/Contact/fields/FavoriteQuote__c.field-meta.xml
<CustomField>
    <fullName>FavoriteQuote__c</fullName>
    <inlineHelpText>A one liner that has changed the Contact&apos;s life for good!</inlineHelpText>
    <label>Favorite Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>