force-app/main/default/objects/Contact/fields/FavoriteWatchBrand__c.field-meta.xml
<CustomField>
    <fullName>FavoriteWatchBrand__c</fullName>
    <inlineHelpText>The brand of Watch the Contact love to wear or is the Contact&apos;s favourite</inlineHelpText>
    <label>Favorite Watch Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>