force-app/main/default/objects/Contact/fields/FieldsOfKnowledge__c.field-meta.xml
<CustomField>
    <fullName>FieldsOfKnowledge__c</fullName>
    <label>Fields Of Knowledge</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>