force-app/main/default/objects/Contact/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>