force-app/main/default/objects/Contact/fields/HairColor__c.field-meta.xml
<CustomField>
    <fullName>HairColor__c</fullName>
    <description>Person Hair Color Shades</description>
    <inlineHelpText>What is the Contact&apos;s Hair color. Pick one from the list</inlineHelpText>
    <label>Hair Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Blonde</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>