force-app/main/default/objects/Contact/fields/HairDescriptor__c.field-meta.xml
<CustomField>
    <fullName>HairDescriptor__c</fullName>
    <inlineHelpText>What is the texture of the Contact&apos;s Hair..select all that apply</inlineHelpText>
    <label>Hair Descriptor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>Wavy</fullName>
            </value>
            <value>
                <fullName>Curly</fullName>
            </value>
            <value>
                <fullName>Coily</fullName>
            </value>
            <value>
                <fullName>Thin</fullName>
            </value>
            <value>
                <fullName>Thick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>