force-app/main/default/objects/Contact/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <formula>TEXT(HeightInFeet__c) &amp; &quot;&apos; &quot; &amp; TEXT(Inches__c) &amp; &apos;&quot;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Thyis is a Formula field that will be calculated based on the values in the above fields.</inlineHelpText>
    <label>Height</label>
    <type>Text</type>
</CustomField>