force-app/main/default/objects/Contact/fields/HeightInFeet__c.field-meta.xml
<CustomField>
    <fullName>HeightInFeet__c</fullName>
    <inlineHelpText>the Contact&apos;s Height in Feet</inlineHelpText>
    <label>Height (In Feet)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>