force-app/main/default/objects/Contact/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>