force-app/main/default/objects/Contact/fields/Inches__c.field-meta.xml
<CustomField>
    <fullName>Inches__c</fullName>
    <inlineHelpText>Enter the contact&apos;s height in inches, example if the height is 6 feel 2 inches, enter 2 in this field</inlineHelpText>
    <label>+ Height (In Inches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>