force-app/main/default/objects/Contact/fields/InstagramHandle__c.field-meta.xml
<CustomField>
    <fullName>InstagramHandle__c</fullName>
    <inlineHelpText>URL if the Contact&apos;s Instagram Handle will come here</inlineHelpText>
    <label>Instagram Handle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>