force-app/main/default/objects/Contact/fields/InterestingFact1__c.field-meta.xml
<CustomField>
    <fullName>InterestingFact1__c</fullName>
    <inlineHelpText>Enter another interesting Fact #1 apart from the Main interesting Fact about this Contact.</inlineHelpText>
    <label>Interesting Fact 1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>