force-app/main/default/objects/Contact/fields/InterestingFact2__c.field-meta.xml
<CustomField>
    <fullName>InterestingFact2__c</fullName>
    <inlineHelpText>Enter another interesting Fact # 2 apart from the Main interesting Fact about this Contact.</inlineHelpText>
    <label>Interesting Fact 2</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>