force-app/main/default/objects/Contact/fields/InterestingFact3__c.field-meta.xml
<CustomField>
    <fullName>InterestingFact3__c</fullName>
    <inlineHelpText>Enter another interesting Fact #3 apart from the Main interesting Fact about this Contact.</inlineHelpText>
    <label>Interesting Fact 3</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>