force-app/main/default/objects/Contact/fields/Investments_They_Hold__c.field-meta.xml
<CustomField>
    <fullName>Investments_They_Hold__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Investments They Hold</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>