force-app/main/default/objects/Contact/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>