force-app/main/default/objects/Contact/fields/Known_Companies_they_ve_invested_in__c.field-meta.xml
<CustomField>
    <fullName>Known_Companies_they_ve_invested_in__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Known Companies they&apos;ve invested in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>