force-app/main/default/objects/Contact/fields/KnownHobbies__c.field-meta.xml
<CustomField>
    <fullName>KnownHobbies__c</fullName>
    <inlineHelpText>Select the contact&apos;s hobbies from the list. More than one value can be selected.</inlineHelpText>
    <label>Known Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car racing</fullName>
            </value>
            <value>
                <fullName>Collecting Antiques</fullName>
            </value>
            <value>
                <fullName>Collecting Art</fullName>
            </value>
            <value>
                <fullName>Collecting Vintage Cars</fullName>
            </value>
            <value>
                <fullName>Flying</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>High-Stakes Poker</fullName>
            </value>
            <value>
                <fullName>Owning a vineyard</fullName>
            </value>
            <value>
                <fullName>Owning exotic pets</fullName>
            </value>
            <value>
                <fullName>Owning horses</fullName>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
            <value>
                <fullName>Politics</fullName>
            </value>
            <value>
                <fullName>Polo</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Sailing</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Yachting</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Crypto* (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Professional sports - NFL (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Professional sports - NHL (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Professional sports - NBA (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Professional sports - Soccer (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Professional sports - Other (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Public speaking</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>High stakes gambling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>