force-app/main/default/objects/Contact/fields/Languages_limited_working_proficiency__c.field-meta.xml
<CustomField>
    <fullName>Languages_limited_working_proficiency__c</fullName>
    <label>Languages (limited working proficiency)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandarin Chinese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Western Punjabi</fullName>
            </value>
            <value>
                <fullName>Yue Chinese</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Wu Chinese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Urdu</fullName>
            </value>
            <value>
                <fullName>Javanese</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Egyptian Arabic</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Iranian Persian</fullName>
            </value>
            <value>
                <fullName>Bhojpuri</fullName>
            </value>
            <value>
                <fullName>Southern Min</fullName>
            </value>
            <value>
                <fullName>Hakka</fullName>
            </value>
            <value>
                <fullName>Jin Chinese</fullName>
            </value>
            <value>
                <fullName>Hausa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>