force-app/main/default/objects/Contact/fields/LinkedInDataRecruiterURL__c.field-meta.xml
<CustomField>
    <fullName>LinkedInDataRecruiterURL__c</fullName>
    <inlineHelpText>URL to Data Recruiter LinkedIn - This field has been removed from the page Lathe Contactt</inlineHelpText>
    <label>LinkedIn Data Recruiter URL</label>
    <type>Url</type>
</CustomField>