force-app/main/default/objects/Contact/fields/LinkedInURL__c.field-meta.xml
<CustomField>
    <fullName>LinkedInURL__c</fullName>
    <inlineHelpText>URL to the Contact&apos;s LinkedIn profile</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>