force-app/main/default/objects/Contact/fields/LuckyNumber__c.field-meta.xml
<CustomField>
    <fullName>LuckyNumber__c</fullName>
    <inlineHelpText>What is the Contact&apos;s lucky number</inlineHelpText>
    <label>Lucky Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>