force-app/main/default/objects/Contact/fields/ManagedPeopleBefore__c.field-meta.xml
<CustomField>
    <fullName>ManagedPeopleBefore__c</fullName>
    <label>Managed People Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>