force-app/main/default/objects/Contact/fields/MarriageStatus__c.field-meta.xml
<CustomField>
    <fullName>MarriageStatus__c</fullName>
    <inlineHelpText>Marriage Status of the contact. Select one from the picklist</inlineHelpText>
    <label>Marriage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Partnered</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>