force-app/main/default/objects/Contact/fields/MiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleInitial__c</fullName>
    <inlineHelpText>Any middle Initial that the Contact&apos;s name has</inlineHelpText>
    <label>Middle Initial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>