force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <inlineHelpText>What is the Contact&apos;s Nationality. Type the name of all the countries separated by comma</inlineHelpText>
    <label>Nationality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>