force-app/main/default/objects/Contact/fields/NickName1__c.field-meta.xml
<CustomField>
    <fullName>NickName1__c</fullName>
    <inlineHelpText>Any Other Nick Name the Contact is known by</inlineHelpText>
    <label>NickName 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>