force-app/main/default/objects/Contact/fields/NickName3__c.field-meta.xml
<CustomField>
    <fullName>NickName3__c</fullName>
    <inlineHelpText>Any 3rd Nick Name the Contact is known by</inlineHelpText>
    <label>NickName 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>