force-app/main/default/objects/Contact/fields/Other_Unaffiliated_Positions__c.field-meta.xml
<CustomField>
    <fullName>Other_Unaffiliated_Positions__c</fullName>
    <inlineHelpText>Fill in the information if &apos;Other&apos; has been selected in the Unaffiliated Position Field above.</inlineHelpText>
    <label>Other Unaffiliated Positions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>