force-app/main/default/objects/Contact/fields/OtherNames__c.field-meta.xml
<CustomField>
    <fullName>OtherNames__c</fullName>
    <inlineHelpText>the Contact&apos;s Business phone number</inlineHelpText>
    <label>Other Names</label>
    <length>50</length>
    <type>Text</type>
</CustomField>