force-app/main/default/objects/Contact/fields/OtherNamesDescription__c.field-meta.xml
<CustomField>
    <fullName>OtherNamesDescription__c</fullName>
    <inlineHelpText>Tell us Why is the Contact known by this &apos;Other Name&apos;</inlineHelpText>
    <label>Other Names Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>