force-app/main/default/objects/Contact/fields/OtherPoliticalAffiliation__c.field-meta.xml
<CustomField>
    <fullName>OtherPoliticalAffiliation__c</fullName>
    <description>Dependent Text field to explain Other Affiliation</description>
    <inlineHelpText>Write the name of the Affiliation if selected &apos;Other&apos;. This is Mandatory.</inlineHelpText>
    <label>Other Political Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>