force-app/main/default/objects/Contact/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <description>If any other language, Please specify.</description>
    <label>Other Language (Please Specify)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>