force-app/main/default/objects/Contact/fields/OtherWebsiteLink1__c.field-meta.xml
<CustomField>
    <fullName>OtherWebsiteLink1__c</fullName>
    <inlineHelpText>Enter the URL of the other website # 1 apart from the Personal Website if this Contact has one.</inlineHelpText>
    <label>Other Website Link #1</label>
    <type>Url</type>
</CustomField>