force-app/main/default/objects/Contact/fields/OtherWebsiteLink2__c.field-meta.xml
<CustomField>
    <fullName>OtherWebsiteLink2__c</fullName>
    <inlineHelpText>Enter the URL of the other website # 2 apart from the Personal Website if this Contact has one.</inlineHelpText>
    <label>Other Website Link #2</label>
    <type>Url</type>
</CustomField>