force-app/main/default/objects/Contact/fields/OtherWebsiteLink3__c.field-meta.xml
<CustomField>
    <fullName>OtherWebsiteLink3__c</fullName>
    <inlineHelpText>Enter the URL of the other website # 3 apart from the Personal Website if this Contact has one.</inlineHelpText>
    <label>Other Website Link #3</label>
    <type>Url</type>
</CustomField>