force-app/main/default/objects/Contact/fields/PersonalQuote__c.field-meta.xml
<CustomField>
    <fullName>PersonalQuote__c</fullName>
    <inlineHelpText>Personal Quote that motivates the Contact when the Contact need it</inlineHelpText>
    <label>Personal Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>