force-app/main/default/objects/Contact/fields/PersonalWebsite__c.field-meta.xml
<CustomField>
    <fullName>PersonalWebsite__c</fullName>
    <inlineHelpText>Enter the URL of the Personal Website if this Contact has one.</inlineHelpText>
    <label>Personal Website</label>
    <type>Url</type>
</CustomField>