force-app/main/default/objects/Contact/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <inlineHelpText>Upload Contact&apos;s latest photo that is not older than 6 months from now</inlineHelpText>
    <label>Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>