force-app/main/default/objects/Contact/fields/PhotoID__c.field-meta.xml
<CustomField>
    <fullName>PhotoID__c</fullName>
    <inlineHelpText>Details of the Photo ID that has been provided by the Contact. Please write the name of the ID and other details if available.</inlineHelpText>
    <label>Photo ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>