force-app/main/default/objects/Contact/fields/PhotoUpload__c.field-meta.xml
<CustomField>
    <fullName>PhotoUpload__c</fullName>
    <formula>IMAGE(&quot;https://steelperlot--preprod.lightning.force.com/sfc/servlet.shepherd/document/download/&quot;+PhotoID__c, &quot;Photo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo Upload</label>
    <type>Text</type>
</CustomField>