force-app/main/default/objects/Contact/fields/PlaceofBirth__c.field-meta.xml
<CustomField>
    <fullName>PlaceofBirth__c</fullName>
    <inlineHelpText>The Place where the Contact was born</inlineHelpText>
    <label>Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>