force-app/main/default/objects/Contact/fields/PoliticalAffiliation__c.field-meta.xml
<CustomField>
    <fullName>PoliticalAffiliation__c</fullName>
    <inlineHelpText>Name of the Political Affiliation that the Contact belongs to. Select 1 from the list.</inlineHelpText>
    <label>Political Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Republican</fullName>
            </value>
            <value>
                <fullName>Democrat</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>