force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Position that the contact currently hold in any company</inlineHelpText>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>