force-app/main/default/objects/Contact/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>