force-app/main/default/objects/Contact/fields/Primary_Location_Of_Investor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location_Of_Investor__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Primary Location Of Investor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>