force-app/main/default/objects/Contact/fields/PrimaryCountryOfResidence__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCountryOfResidence__c</fullName>
    <inlineHelpText>The country where the contact is currently residing permanently</inlineHelpText>
    <label>Primary Country Of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>