force-app/main/default/objects/Contact/fields/PrimaryLocation__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLocation__c</fullName>
    <label>Primary Location</label>
    <type>TextArea</type>
</CustomField>