force-app/main/default/objects/Contact/fields/ProfileURL__c.field-meta.xml
<CustomField>
    <fullName>ProfileURL__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Profile URL</label>
    <type>Url</type>
</CustomField>