force-app/main/default/objects/Contact/fields/Regulatory_Body__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the Regulatory Body to which the contact belongs. Select one via lookup or created New</inlineHelpText>
    <label>Regulatory Body</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regulators</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>