force-app/main/default/objects/Contact/fields/ResidentSince__c.field-meta.xml
<CustomField>
    <fullName>ResidentSince__c</fullName>
    <inlineHelpText>Day and Year since the contact started living at this address</inlineHelpText>
    <label>Resident Since</label>
    <type>Date</type>
</CustomField>